<?xml version="1.0"?>
<package format="2">
  <name>auto_stabilizer</name>
  <version>0.2.0</version>
  <description>The auto_stabilizer package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyuo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <author email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rtmbuild2</depend>
  <depend>cpp_filters</depend>
  <depend>choreonoid</depend>
  <depend>hrpsys_ros_bridge</depend>
  <depend>ik_constraint</depend>
  <depend>prioritized_qp_osqp</depend>
  <depend>joint_limit_table</depend>
  <depend>prioritized_inverse_kinematics_solver</depend>
  <depend>ik_constraint_joint_limit_table</depend>
  <depend>collision_checker_msgs</depend>
  <depend>auto_stabilizer_msgs</depend>
</package>
