<?xml version="1.0"?>
<package format="2">
  <name>auto_stabilizer_msgs</name>
  <version>0.0.0</version>
  <description>The auto_stabilizer_msgs package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rtmbuild2</depend>
  <depend>geometry_msgs</depend>

</package>
